manifests/apps/imdbgraph/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: imdbgraph-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: imdbgraph-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdbgraph-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: imdbgraph-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: imdbgraph-api
    spec:
      containers:
        - name: imdbgraph-api
          image: ghcr.io/aamini11/imdbgraph-api:main
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "500m"
