manifests/apps/imdbgraph/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: imdbgraph-http
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - api.staging.imdbgraph.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: imdbgraph-service
      namespace: default
      port: 80
  # rules:
  #   - filters:
  #       - type: RequestRedirect
  #         requestRedirect:
  #           scheme: https
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: imdbgraph-https
#   namespace: default
# spec:
#   parentRefs:
#   - name: traefik
#     sectionName: websecure
#     kind: Gateway
#   hostnames:
#   - api.staging.imdbgraph.org
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: imdbgraph-service
#       namespace: default
#       port: 80
