manifests/apps/imdbgraph/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: imdbgraph-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: imdbgraph-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: imdbgraph-httproute
spec:
  parentRefs:
  - name: gateway
    namespace: networking
  hostnames:
  - api.imdbgraph.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: imdbgraph-service
      port: 80
